--- a/package.json
+++ b/package.json
@@ -2,11 +2,12 @@
   "homepage": "https://davidmickev.github.io/portfolio",
   "name": "my-app",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "error-ex": "git+https://github.com/Qix-/node-error-ex.git",
     "jquery": "^3.5.1",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
@@ -39,5 +40,10 @@
   },
   "devDependencies": {
     "gh-pages": "^3.1.0"
-  }
+  },
+  
+    "rules": {
+        "no-restricted-globals": ["error", "event", "fdescribe"]
+    }
+
 }
