--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://davidmickev.github.io/",
+  "homepage": "https://davidmickev.github.io",
   "name": "my-app",
   "version": "0.1.0",
   "private": false,
