changed headers and resume

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "caniuse-lite": "^1.0.30001181",
     "error-ex": "git+https://github.com/Qix-/node-error-ex.git",
     "file-saver": "^2.0.5",
     "gsap": "^3.5.1",
