--- a/package.json
+++ b/package.json
@@ -2,29 +2,34 @@
   "homepage": "https://davidmickev.github.io/",
   "name": "my-app",
   "version": "0.1.0",
+  "type": "module",
   "private": false,
   "dependencies": {
-    "@fortawesome/fontawesome-free": "^5.15.1",
-    "@fortawesome/fontawesome-svg-core": "^1.2.32",
-    "@fortawesome/free-brands-svg-icons": "^5.15.1",
-    "@fortawesome/free-solid-svg-icons": "^5.15.1",
-    "@fortawesome/react-fontawesome": "^0.1.12",
+    "@fortawesome/fontawesome-free": "^5.15.3",
+    "@fortawesome/fontawesome-svg-core": "^1.2.35",
+    "@fortawesome/free-brands-svg-icons": "^5.15.3",
+    "@fortawesome/free-solid-svg-icons": "^5.15.3",
+    "@fortawesome/react-fontawesome": "^0.1.14",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
-    "caniuse-lite": "^1.0.30001181",
+    "caniuse-lite": "^1.0.30001240",
     "error-ex": "git+https://github.com/Qix-/node-error-ex.git",
     "file-saver": "^2.0.5",
-    "gsap": "^3.5.1",
-    "jquery": "^3.5.1",
-    "node-sass": "^4.14.1",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
+    "graphql": "^15.5.1",
+    "gsap": "^3.7.0",
+    "jquery": "^3.6.0",
+    "node": "^16.4.0",
+    "node-fetch": "^2.6.1",
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0",
     "react-download-link": "^2.3.0",
     "react-reveal": "^1.2.2",
-    "react-scripts": "^3.4.3",
-    "styled-components": "^5.1.1",
-    "styled-icons": "^10.22.0"
+    "react-scripts": "^3.4.4",
+    "sass": "^1.35.1",
+    "sass-loader": "^12.1.0",
+    "styled-components": "^5.3.0",
+    "styled-icons": "^10.35.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -50,7 +55,7 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^3.1.0"
+    "gh-pages": "^3.2.3"
   },
   "rules": {
     "no-restricted-globals": [
