--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-download-link": "^2.3.0",
     "react-reveal": "^1.2.2",
     "react-scripts": "^3.4.4",
+    "reactstrap": "^8.9.0",
     "sass": "^1.35.1",
     "sass-loader": "^12.1.0",
     "styled-components": "^5.3.0",
