gql query converted

--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "@types/react": "^17.0.14",
+    "axios": "^0.21.1",
     "caniuse-lite": "^1.0.30001240",
     "error-ex": "git+https://github.com/Qix-/node-error-ex.git",
     "file-saver": "^2.0.5",
@@ -24,6 +26,7 @@
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "react-download-link": "^2.3.0",
+    "react-promise": "^3.0.2",
     "react-reveal": "^1.2.2",
     "react-scripts": "^3.4.4",
     "reactstrap": "^8.9.0",
