--- a/.github/workflows/deploy-gh-pages.yml
+++ b/.github/workflows/deploy-gh-pages.yml
@@ -1,8 +1,12 @@
 name: Build and Deploy
+
 on:
   push:
     branches:
-      - master
+      - master # Trigger on pushes to the master branch
+    tags:
+      - 'v*' # Trigger on tags starting with "v"
+
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
@@ -16,6 +20,7 @@ jobs:
         run: |
           npm install
           npm run build
+
       - name: Deploy to GitHub Pages 🚀
         if: success()
         uses: crazy-max/ghaction-github-pages@v2
@@ -24,3 +29,16 @@ jobs:
           build_dir: build
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Create GitHub Release 🏷️
+        if: startsWith(github.ref, 'refs/tags/')
+        uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          tag_name: ${{ github.ref_name }}
+          release_name: Release ${{ github.ref_name }}
+          body: |
+            ## Changes
+            - Add your release notes here.
+          draft: false
