--- a/package.json
+++ b/package.json
@@ -5,35 +5,35 @@
   "type": "",
   "private": false,
   "dependencies": {
-    "@fortawesome/fontawesome-free": "^5.15.3",
-    "@fortawesome/fontawesome-svg-core": "^1.2.35",
-    "@fortawesome/free-brands-svg-icons": "^5.15.3",
-    "@fortawesome/free-solid-svg-icons": "^5.15.3",
-    "@fortawesome/react-fontawesome": "^0.1.14",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.5.0",
-    "@testing-library/user-event": "^7.2.1",
-    "@types/react": "^17.0.14",
-    "axios": "^0.21.1",
-    "caniuse-lite": "^1.0.30001240",
+    "@fortawesome/fontawesome-free": "^6.7.2",
+    "@fortawesome/fontawesome-svg-core": "^6.7.2",
+    "@fortawesome/free-brands-svg-icons": "^6.7.2",
+    "@fortawesome/free-solid-svg-icons": "^6.7.2",
+    "@fortawesome/react-fontawesome": "^0.2.2",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.2.0",
+    "@testing-library/user-event": "^14.6.1",
+    "@types/react": "^19.0.12",
+    "axios": "^1.8.4",
+    "caniuse-lite": "^1.0.30001707",
     "error-ex": "git+https://github.com/Qix-/node-error-ex.git",
     "file-saver": "^2.0.5",
-    "graphql": "^15.5.1",
-    "gsap": "^3.7.0",
-    "jquery": "^3.6.0",
-    "node": "^16.4.0",
-    "node-fetch": "^2.6.1",
-    "react": "^16.14.0",
-    "react-dom": "^16.14.0",
+    "framer-motion": "^12.6.2",
+    "graphql": "^16.10.0",
+    "gsap": "^3.12.7",
+    "jquery": "^3.7.1",
+    "node": "^18.20.8",
+    "node-fetch": "^3.3.2",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
     "react-download-link": "^2.3.0",
     "react-promise": "^3.0.2",
-    "react-reveal": "^1.2.2",
     "react-scripts": "^5.0.1",
-    "reactstrap": "^8.9.0",
-    "sass": "^1.35.1",
-    "sass-loader": "^12.1.0",
-    "styled-components": "^5.3.0",
-    "styled-icons": "^10.35.0"
+    "reactstrap": "^9.2.3",
+    "sass": "^1.86.0",
+    "sass-loader": "^16.0.5",
+    "styled-components": "^6.1.16",
+    "styled-icons": "^10.47.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -59,7 +59,7 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^3.2.3"
+    "gh-pages": "^6.3.0"
   },
   "rules": {
     "no-restricted-globals": [
